# embedded

./: .gitignore  CLAUDE.md  README.md
bvr/: CMakeLists.txt
bvr/main/: CMakeLists.txt  main.c
bvr/main/LCD_Driver/: ST7789.c  ST7789.h
bvr/main/LCD_Driver/Vernon_ST7789T/: Vernon_ST7789T.c
esp/: export.sh
mini-weather-1/: main.py
pi0/iot-stack/: docker-compose.yml  iot
pi0/iot-stack/cli/: README.md  iot  iot_cli.py  pyproject.toml
pi0/iot-stack/homeassistant/config/.storage/: assist_pipeline.pipelines  bluetooth.remote_scanners  core.config_entries  core.device_registry  core.entity_registry  core.restore_state  http  http.auth  repairs.issue_registry
pi0/iot-stack/loki/: loki-config.yml
pi0/iot-stack/nginx/data/: keys.json
pi0/iot-stack/pihole/dnsmasq/: 01-local-domains.conf  05-monitoring-srv.conf
pi0/iot-stack/pihole/etc/: cli_pw  dnsmasq.conf  pihole.toml
pi0/iot-stack/pihole/etc-pihole/: dnsmasq.conf  pihole.toml
pi0/iot-stack/pihole/etc-pihole/config_backups/: pihole.toml.1  pihole.toml.2
pi0/iot-stack/pihole/etc-pihole/hosts/: custom.list
pi0/iot-stack/pihole/etc-pihole/listsCache/: list.1.raw.githubusercontent.com.domains.sha1
pi0/iot-stack/pihole/etc/config_backups/: pihole.toml.1  pihole.toml.10  pihole.toml.11  pihole.toml.2  pihole.toml.3  pihole.toml.4  pihole.toml.5  pihole.toml.6  pihole.toml.7  pihole.toml.8  pihole.toml.9
pi0/iot-stack/prometheus/: prometheus.yml
pi1-cam/: cam_monitor.py  mediamtx.service  object_detection.py  pyproject.toml  start_object_detector.sh
tf1/: docker-compose.yml
(+12 files in other folders)
